// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(152, 152, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <Text
          style={
            Object {
              "paddingRight": 6,
            }
          }
        >
          Branson Gutmann
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text>
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly as mine 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(127, 123, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <Text
          style={
            Object {
              "paddingRight": 6,
            }
          }
        >
          Branson Gutmann
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text>
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders editing correctly 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(152, 152, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <Text
          style={
            Object {
              "paddingRight": 6,
            }
          }
        >
          Branson Gutmann
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text>
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders my reported comment 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(127, 123, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "paddingRight": 6,
          }
        }
      >
        Branson Gutmann
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text>
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders reported comment 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(152, 152, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "paddingRight": 6,
          }
        }
      >
        Branson Gutmann
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text>
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders reported story 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(152, 152, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "paddingRight": 6,
          }
        }
      >
        Branson Gutmann
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="popupMenuButton"
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#ECEEF2",
              "borderRadius": 8,
              "marginVertical": 5,
              "paddingHorizontal": 13,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text>
          esse repellat quisquam
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders without menu actions 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "paddingHorizontal": 30,
      "paddingVertical": 8,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "repellat ratione ut",
      }
    }
    style={
      Array [
        Object {
          "borderRadius": 18,
          "height": 36,
          "width": 36,
        },
        Object {
          "backgroundColor": "rgb(152, 152, 152)",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Object {
        "paddingLeft": 10,
        "paddingRight": 25,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "opacity": 1,
          }
        }
        testID="NameButton"
      >
        <Text
          style={
            Object {
              "paddingRight": 6,
            }
          }
        >
          Branson Gutmann
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {},
          ]
        }
        testID="Text"
      >
        September 19, 2010 @ 3:58 AM
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "paddingHorizontal": 2,
            },
          ]
        }
      >
         • 
      </Text>
      <Text
        style={
          Object {
            "color": "#B4B6BA",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 12,
            "fontStyle": "normal",
            "lineHeight": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        Edited
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
            "backgroundColor": "#ECEEF2",
            "borderRadius": 8,
            "marginVertical": 5,
            "paddingHorizontal": 13,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
    >
      <Text>
        esse repellat quisquam
      </Text>
    </View>
  </View>
</View>
`;
